# qt-calculator

./: CMakeLists.txt  backend.cpp
